--- a/assets/impressum.html
+++ b/assets/impressum.html
@@ -32,7 +32,7 @@
     
     <h2>Kontakt</h2>
     <p>Telefon: 015258121820<br />
-    E-Mail: into@va-schoell.de</p>
+    E-Mail: info@va-schoell.de</p>
     
     <h2>Berufsbezeichnung und berufsrechtliche Regelungen</h2>
     <p>Berufsbezeichnung:<br />
